# emma-open-source-release

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: OPEN_SOURCE_CHECKLIST.md  PUBLIC_PREVIEW_MANIFEST.md  RELEASE_NOTES.md
emma/environment/: README.md
emma/environment/bigcodebench/: README.md  config.yaml
emma/environment/intercode_sql/: README.md  config.yaml
emma/environment/scienceworld/: README.md  config.yaml
