[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "emma-public-preview"
version = "0.1.0"
description = "Public preview shell for EMMA with core implementation withheld until acceptance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EMMA" }]
